--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "react-scroll-to-bottom": "^4.0.0",
+    "router": "^1.3.5",
     "socket.io-client": "^2.3.1"
   },
   "scripts": {
