--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "material-icons-react": "^1.0.4",
+    "netlify-cli": "^2.68.0",
     "query-string": "^6.13.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
