--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "material-icons-react": "^1.0.4",
+    "netlify-cli": "^2.68.0",
     "query-string": "^6.13.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-emoji": "^0.5.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^4.0.0",
     "react-scroll-to-bottom": "^4.0.0",
     "router": "^1.3.5",
     "socket.io-client": "^2.3.1"
